--- a/src/app/components/toys-and-accessories/toys-and-accessories.component.css
+++ b/src/app/components/toys-and-accessories/toys-and-accessories.component.css
@@ -2,3 +2,11 @@
     height: calc(100% - 110px);
     overflow-y: scroll;
 }
+
+.active {
+    color: #e17835;
+}
+
+.filter-right-x {
+    right: 3.5rem;
+}
