--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="flex flex-row h-full">
-        <div class="basis-1/2 md:basis-1/4 flex items-center justify-center sm:justify-start">
+        <div class="basis-1/2 md:basis-1/4 flex items-center justify-end sm:justify-start">
             <div class="flex flex-shrink-0 items-center">
                 <img class="h-28 w-auto" src="../assets/images/logo.png" alt="Amazing Pets">
             </div>
