--- a/src/app/components/pet-details/pet-details.component.html
+++ b/src/app/components/pet-details/pet-details.component.html
@@ -1,31 +1,30 @@
-<div class="flex flex-row h-full">
+<div class="flex flex-col lg:flex-row max-h-modal lg:h-full">
     <div class="basis-1/2 pt-4 px-4 flex flex-col">
-        <div class="h-c-90">
+        <div class="">
             <img src="../../../assets/images/pets/{{pet.image}}" class="w-full mb-2" />
         </div>
-        <div class="grid grid-cols-3">
+        <div class="grid grid-cols-2 sm:grid-cols-3">
             <label><span class="text-500">Category: </span>{{getPetCategory(pet.category)}}</label>
             <label><span class="text-500">Height: </span>{{pet.height}} inches</label>
             <label><span class="text-500">Color: </span>{{pet.color}}</label>
             <label><span class="text-500">Breed: </span>{{pet.breed}}</label>
             <label><span class="text-500">Weight: </span>{{pet.weight}} grams</label>
             <label><span class="text-500">Life Expectancy: </span>{{pet.lifeExpectancy}} years</label>
-          </div>
-        
+        </div>
     </div>
     <div class="basis-1/2 pt-4 px-4 flex flex-col">
         <div class="h-c-90">
             <h2>{{pet.breed}}</h2>
             <p>{{pet.description}}</p>
         </div>
-        <div class="flex flex-row-reverse py-2">
-            <button (click)="onCloseDialog()" class="bg-transparent hover:bg-blue-950 text-blue-950 hover:text-white py-2 px-4 border border-blue-950 hover:border-transparent rounded">
+        <div class="flex flex-col-reverse py-2 justify-center">
+            <button (click)="onCloseDialog()" class="py-1 my-1 focus:invalid bg-transparent hover:bg-blue-950 text-blue-950 hover:text-white border border-blue-950 hover:border-transparent rounded">
                 Close
             </button>
-            <button (click)="onBookAppointment(pet.id)" class="bg-blue-950 hover:bg-blue-900 text-white py-2 px-4 rounded mx-3">
-              Book An Appointment
+            <button (click)="onBookAppointment(pet.id)" class="py-1 my-1 focus:invalid bg-blue-950 hover:bg-blue-900 text-white rounded">
+                Book An Appointment
             </button>
-            <h1 class="pt-1">${{pet.price}}</h1>
+            <h1 class="text-center">${{pet.price}}</h1>
         </div>
     </div>
-  </div>
+ </div>
